--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-    background-image: url(/img/love_image.jpeg);
+    background-image: url('/img/love_image.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
